--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "nesbot/carbon": "^2.67"
+        "nesbot/carbon": "^2.67",
+        "phpmailer/phpmailer": "^6.8"
     }
 }
